add security and all for user rest path