@@ -1,24 +1,28 @@
 package com.borlok.transferservice.model;
 
-import java.time.LocalDateTime;
+import lombok.Data;
+
+import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Erofeevskiy Yuriy
  */
 
+@Data
+public final class UserDto {
+    private final String name;
+    private final LocalDate dateOfBirth;
+    private final List<String> emails;
+    private final List<String> phones;
 
-public record UserDto (
-        String name,
-        LocalDateTime dateOfBirth,
-        List<String> emails,
-        List<String> phones
-){
     public static UserDto of(User user, List<Email> emails, List<Phone> phones) {
         return new UserDto(
                 user.getName(),
                 user.getDateOfBirth(),
-                emails.stream().map(Email::getEmail).toList(),
-                phones.stream().map(Phone::getPhone).toList());
+                emails.stream().map(Email::getEmail).collect(Collectors.toList()),
+                phones.stream().map(Phone::getPhone).collect(Collectors.toList()));
     }
+
 }
